# validator

./: .clang-format  CMakeLists.txt
src/crypto/base/: base.hpp  base64.hpp
src/crypto/bech/: bech.hpp  bech32.hpp  bech32m.hpp  blech32.hpp  blech32m.hpp
tests/: CMakeLists.txt
tests/crypto/: base.spec.cpp  bech.spec.cpp
